--- a/configuracion.html
+++ b/configuracion.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Configuracion</title>
+    <style>
+        h2 {
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        p{
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.5;
+        }
+    </style>
 </head>
-<body>
-    
+    <h1>La mejor Configuración en tu liga Fantasy</h1>
+<body style="background-color: skyblue;">
+    <main>
+        <article>
+            <h2>¿Cómo inicio?</h2>
+            <p>Antes que nada, debes conseguir un grupo de amigos interesados en jugar Fantasy, esto de preferencia que sea un número <b>PAR</b>. Eso es lo primordial ya que una liga con numero impar sería injusto pues o no puedes iniciar la liga, o juega una IA que puede llegar a ganar o incluso ser un estorbo.</p>
+
+            <h2>¿Cuántos debo conseguir?</h2>
+            <p>Lo recomendable es tener <b>12</b>. Aunque hoy en día tener 10 o 14 e incluso 16 es un número aceptable; pero la cantidad recomendable para tener los mejores jugadores y poder tener buenos partidos con buena cantidad de puntos es con 12.</p>
+
+            <h2>¿Con cuánto tiempo de anticipación debo empezar a organizar la liga?</h2>
+            <p>Tomando en cuenta que puedes ser nuevo en organizarla y debes conseguir amigos con los mismos intereses, es recomendable al menos <strong>50 días antes</strong> del inicio de la NFL.</p>
+
+            <h2>Ahora que ya tengo la liga y con quien jugar, ¿qué sigue?</h2>
+            <p>¡¡Hay que proponer una fecha del día del Draft!! Recuerda que el draft es un evento que puede durar de 1 hora a 2 horas dependiendo la actividad de los participantes de la liga y tu configuración.</p>
+            <figure style="text-align: center;">
+                <img src="https://fantasy.nfl.com/static/img/draftCenterCenterpieceMockDraft_1724281527.jpg" alt="Draft" width="500px">
+        </figure>
+        </article>
+    </main>
 </body>
 </html>
