--- a/rankings.html
+++ b/rankings.html
@@ -110,6 +110,138 @@
             <li>Equipo: <span style="color: rgb(81, 81, 233);">Indianapolis Colts</span></li>
         </ul>
         <p>La situación no cambia mucho para Jonathan Taylor, después de perderse 7 juegos la temporada pasada, ahora tendrá a Anthony Richardson quien le tomará una cantidad de acarreos y posibles anotaciones, pero la producción de JT la tendremos. El talento que tiene es innegable y la producción que ofrece es demasiada a comparación de otros corredores.</p>
+        <br>
+    <h1><b>Quarterbacks:</b></h1>
+    <ol>
+        <h2><li>Jalen Hurts</li></h2>
+        <figure>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeH0URdzwyrU13-Gxw-EFJUX5JVVLM9vCoMQ&s" alt="Hurts" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>3° - 5°</b></li>
+            <li>ADP:<b>31.7</b></li>
+            <li>Puntos realizados la temporada pasada: <b>371.8</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>QB2</b></li>
+            <li>Puntos proyectados para 2024: <b>360.5</b></li>
+            <li>Equipo: <span style="color: rgb(10, 83, 10);">Philadelphia Eagles</span></li>
+        </ul>
+        <p>Jalen Hurts es un QB completo en la posición, su buena puntería en pases profundos y su habilidad para correr le permitirán competir por ser el mejor quarterback en Fantasy. Este año a pesar de la baja de su centro Jason Kelce, tendrá su oportunidad en zona roja de anotar y además, tendrá un mejor backfield en Saquon Barkley. Con el talento en el campo y un staff con un gran coordinador ofensivo, le permitirán demostrar su valor en el juego.</p>
+        <br>
+        <h2><li>Josh Allen</li></h2>
+        <figure>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4czqT0OhcycSeWYt7HXtPIjFhAFNW-uMnyA&s" alt="Josh" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>2° - 4°</b></li>
+            <li>ADP:<b>22.7</b></li>
+            <li>Puntos realizados la temporada pasada: <b>410.6</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>QB1</b></li>
+            <li>Puntos proyectados para 2024: <b>360.2</b></li>
+            <li>Equipo: <span style="color: blue;">Buffalo Bills</span></li>
+        </ul>
+        <p>Si bien es cierto que perdió a Steffon Diggs y Gabriel Davies, el talento en su brazo y su habilidad para correr era muy buena. Perdió sus 2 mejores receptores, pero tiene piezas clave en jóvenes como Dalton Kincaid o Khalil Shakir quienes le van a ayudar en una ofensiva que se puede ver mermada por las ausencias de sus estrellas. Se espera que baje un poco su nivel pero no lo suficiente para no destacar en Fantasy.</p>
+        <br>
+        <h2><li>Lamar Jackson</li></h2>
+        <figure>
+        <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2024/02/10/17075808803167.jpg" alt="Lamar" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>3° - 5°</b></li>
+            <li>ADP:<b>37.7</b></li>
+            <li>Puntos realizados la temporada pasada: <b>338.2</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>QB3</b></li>
+            <li>Puntos proyectados para 2024: <b>339.2</b></li>
+            <li>Equipo: <span style="color: purple;">Baltimore Ravens</span></li>
+        </ul>
+        <p>El año pasado tuvo una temporada merecedora de MVP, este año con una ofensiva mejorada y sana, se espera que mantenga su alto nivel. Podrá ser verdad que Derrick Henry le quitará unos acarreos, pero las defensivas tendrán que tomar decisiones que puedan hacer el juego más fácil para Lamar. Es un QB que si las lesiones no vuelven a molestarlo, es un top 5 e incluso top 3.</p>
+        <br>
+        <h2><li>Patrick Mahomes</li></h2>
+        <figure>
+        <img src="https://static.foxnews.com/foxnews.com/content/uploads/2022/01/Patrick-Mahomes15.jpg" alt="Mahomes" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>2° - 5°</b></li>
+            <li>ADP:<b>31.3</b></li>
+            <li>Puntos realizados la temporada pasada: <b>294.2</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>QB7</b></li>
+            <li>Puntos proyectados para 2024: <b>336.6</b></li>
+            <li>Equipo: <span style="color: red;">Kansas City Chiefs</span></li>
+        </ul>
+        <p>Después de demostrar que puede hacer interesamtes cosas con una ofensiva sin un receptor estrella, este año tiene grandes talentos en la posición. Está claro que este año a Mahomes solo una lesión lo puede parar; con la ofensiva que tiene, puede llegar a ser un QB1 sin tener la habilidad para correr de Hurts, Allen o Jackson; es talento puro lo que tiene.</p>
+        <br>
+        <h2><li>Anthony Richardson</li></h2>
+        <figure>
+        <img src="https://media.video-cdn.espn.com/motion/2024/0821/dm_240821_dm_20240821_FFP_Anthony_Richardson_pub2tag/dm_240821_dm_20240821_FFP_Anthony_Richardson_pub2tag.jpg" alt="Richardson" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>4° - 7°</b></li>
+            <li>ADP:<b>49</b></li>
+            <li>Puntos realizados la temporada pasada: <b>73.7</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>QB37</b></li>
+            <li>Puntos proyectados para 2024: <b>310.4</b></li>
+            <li>Equipo: <span style="color: rgb(81, 81, 233);">Indianapolis Colts</span></li>
+        </ul>
+        <p>El año de novato fue muy duro para él, fue cortada su temporada por una lesión en el hombro, por eso terminó fuera del top 24. Pero lo que demostró es talento puro como corredor, además de un buen brazo. Tiene el talento en el cuerpo de receptores que tiene y tendrá muchas oportunidades de anotar con sus pies.</p>
+        <br>
+    <h1><b>Wide Receivers:</b></h1>
+    <ol>
+        <h2><li>CeeDee Lamb</li></h2>
+        <figure>
+        <img src="https://on3static.com/cdn-cgi/image/height=417,width=795,quality=90,fit=cover,gravity=0.5x0.5/uploads/dev/assets/cms/2024/07/28132023/ceedee-lamb-gives-surprising-list-of-his-top-five-cornerbacks-in-the-nfl.jpg" alt="Lamb" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>1°</b></li>
+            <li>ADP:<b>3.0</b></li>
+            <li>Puntos realizados la temporada pasada: <b>335.7</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>WR1</b></li>
+            <li>Puntos proyectados para 2024: <b>332.4</b></li>
+            <li>Equipo: <span style="color: blue;">Dallas Cowboys</span></li>
+        </ul>
+        <p>Es innegable el talento, pero actualmente está en una disputa contractual con los cowboys. Si se resuelve, llegará a ser otra vez una de las mejores opciones en Fantasy, pues mantendrá un equipo igual los Cowboys que en 2023, se espera una producción igual o mejor siempre y cuando se resuelva lo de su contrato.</p>
+        <br>
+        <h2><li>Tyreek Hill</li></h2>
+        <figure>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn8PWhFk4nE3myC7w4RKLa1yt7DcGNTxl8mQ&s" alt="Hill" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>1°</b></li>
+            <li>ADP:<b>2.0</b></li>
+            <li>Puntos realizados la temporada pasada: <b>316.9</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>WR2</b></li>
+            <li>Puntos proyectados para 2024: <b>325</b></li>
+            <li>Equipo: <span style="color: rgb(0, 255, 149);">Miami Dolphins</span></li>
+        </ul>
+        <p>El año pasado intentó llegar a las 2,000 yardas, marca que ningún receptor ha llegado; lastimosamente no pudo llegar. Este año es más viejo pero sigue siendo la opción número 1 de Tua con los dolphins. La velocidad no disminuirá mucho este año, además que siempre es constante en sus temporadas; de todos los receptores es el más probable a llegar a las 2,000 yardas. Es una gran opción en Fantasy.</p>
+        <br>
+        <h2><li>Amon-Ra St. Brown</li></h2>
+        <figure>
+        <img src="https://s.yimg.com/ny/api/res/1.2/NsADUREl8NF7ORcnQqPONQ--/YXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD04MDA-/https://s.yimg.com/os/creatr-uploaded-images/2023-12/d879bd00-ab59-11ee-bf1a-b0a6145f6fd0" alt="Amon" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>1°</b></li>
+            <li>ADP:<b>7.3</b></li>
+            <li>Puntos realizados la temporada pasada: <b>271.4</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>WR3</b></li>
+            <li>Puntos proyectados para 2024: <b>297.4</b></li>
+            <li>Equipo: <span style="color: blue;">Detroit Lions</span></li>
+        </ul>
+        <p>Se espera otro gran año en esta ofensiva para Amon-Ra, tendrá que compartir ciertos targets con sus compañeros pero siempre tendrá la preferencia de Jared Goff. Se espera un año mejor para Amon-Ra, se mantiene el mismo equipo y su coordinador ofensivo.</p>
+        <br>
+        <h2><li>Ja'Marr Chase</li></h2>
+        <figure>
+        <img src="https://ewscripps.brightspotcdn.com/dims4/default/fb01577/2147483647/strip/true/crop/7472x4203+0+0/resize/1280x720!/quality/90/?url=http%3A%2F%2Fewscripps-brightspot.s3.amazonaws.com%2F94%2F32%2F78a08fc9477688771de5a1bf9838%2Fap23310674154393.jpg" alt="Chase" width="250px">
+        </figure>
+        <ul>
+            <li>Rondas en la que se puede escoger: <b>1°</b></li>
+            <li>ADP:<b>6.3</b></li>
+            <li>Puntos realizados la temporada pasada: <b>212.7</b></li>
+            <li>Posición en que finalizó la temporada pasada: <b>WR10</b></li>
+            <li>Puntos proyectados para 2024: <b>297.4</b></li>
+            <li>Equipo: <span style="color: orange;">Cincinatti Bengals</span></li>
+        </ul>
+        <p>Después de un año complicado con lesiones de él y de su QB, terminó fuera del top 5; si los Bengals pueden mantenerse sin lesiones, van a ser un equipo contendiente y gran parte de la ofensiva será Ja'Marr. Ahora con la baja de Joe Mixon, será una ofensiva donde estarán </p>
+        <br>
+
 
     </ol>
 </body>
