--- a/historia.html
+++ b/historia.html
@@ -80,8 +80,8 @@
 
             <h1>Uso de las tecnologías</h1>
             <p>En 1985, cuando las computadoras estaban empezando a ser vistas más seguido, se crearon las primeras ligas Fantasy online a través de la página Q-Link (Hoy en día America online). Estas ligas fueron nacionales y fueron creadas gracias a <strong>Grandstand Sports Services</strong>. Ellos fueron los pioneros de las ligas Fantasy Online pues las siguientes fueron hasta 1997 cuando la famosa cadena de televisón <em>CBS</em> sacó sus ligas Fantasy en su propio sitio web; luego le siguió <em>Yahoo</em> que empezó a hacer ligas públicas para todos los usuarios pues en Q-Link y CBS solamente se podían hacer ligas privadas por lo que muchos usuarios aún no podían acceder al juego. Ya para los 2000's <em>ESPN</em> y el sitio de <em>NFL.com</em> empezaron a crear sitios para jugar Fantasy Football e innovaron el juego con grandes postales ofreciendo comerciales a los usuarios con jugadores de la NFL haciendo alusión a que si juegan Fantasy, que los escojan. A continuación un ejemplo de lo que eran estos divertidos y grandes comerciales:</p>
-            <video controls src="NFL Fantasy File_ Chris Cooley.mp4" width="350px"></video>
-            <video controls src="NFL Fantasy File_ Laurence Maroney jumps through a car.mp4" width="350px"></video>
+            <video controls src="Chris_Cooley.mp4" width="350px"></video>
+            <video controls src="L_Maroo.mp4" width="350px"></video>
             <video controls src="videoplayback.mp4" width="350px"></video>
             <br>
             <h1>Récords</h1>
