--- a/configuracion.html
+++ b/configuracion.html
@@ -84,6 +84,9 @@
                 <dd>Esto es un tema que varía; mientras más personas, menos debe durar y esto por dos razones: <br> 1.<b>Agilización de Draft:</b> Esto para que el draft no se una evento lento y monótono, se ocupa que se agilice y tenga todos los participantes activos. <br> 2. <b>Elección Rápida:</b> Esto es porque al ser muchos participantes en algunos casos, se tiene que saber con tiempo cuales son tus opciones para escoger por lo que dar mucho tiempo es algo que puede resultar absurdo.</dd>
             </dl>
             <p>Nuestra mejor recomendación sería: <strong>1 minuto por pick.</strong></p>
+            <aside>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvSWXoUueruzOuFllZeDw6yYCz02w1WVt2OQ&s" alt="Snickers">
+            </aside>
             <br>
             <h2>¿Qué sistema de puntuación uso para los jugadores?</h2>
             <p>Hay que saber que tenemos 3 tipos de puntuación; pero solo varía una estadística, aquí te presento el sistema de puntuación general para las ligas Fantasy.</p>
@@ -109,6 +112,39 @@
             <p>Cuida los rosters de tus rivales. En tu roster añade lo que se llama <b>IR</b> (Concepto visto en <a href="conceptos.html">esta página</a>). Este espacio sirve para que en caso de alguna lesión de tu equipo Fantasy, no tengas un espacio ocupado en tu roster; colocando un apartado IR, se puede colocar el jugador lesionado ahí y puedes traer de FA (Otro concepto visto en el apartado de conceptos) cualquier jugador para suplirlo en lo que se recupera tu jugador estrella.</p>
             <h3 style="color: green;">¡¡ADVERTENCIA!!</h3>
             <p>Solo puedes colocar jugadores en IR, los suspendidos (SUS), los físicamente inhabilitados (PUP) y los que están en IR en sus equipos de la NFL.</p>
+            <br>
+            <p>Ya con esta configuración, tu y tu liga están listos para jugar Fantasy Football y demostrar porque saben más de football y NFL que los demás.</p>
+            <pre>________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ___¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                _¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ¶¶¶¶______¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶_______¶¶¶¶ 
+                ¶¶¶_______¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶________¶¶¶ 
+                ¶¶________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶________¶¶¶ 
+                ¶¶¶_____¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶______¶¶¶ 
+                ¶¶¶____¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶____¶¶¶¶ 
+                _¶¶¶___¶¶¶_¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶_¶¶¶____¶¶¶ 
+                _¶¶¶¶___¶¶¶_¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶_¶¶¶¶__¶¶¶¶ 
+                ___¶¶¶¶__¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶_¶¶¶¶¶ 
+                ____¶¶¶¶¶¶¶¶_¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶_¶¶¶¶¶¶¶¶¶ 
+                ______¶¶¶¶¶¶__¶¶¶¶¶¶¶¶¶¶¶¶¶¶___¶¶¶¶¶¶ 
+                _______________¶¶¶¶¶¶¶¶¶¶¶¶ 
+                _________________¶¶¶¶¶¶¶¶ 
+                ___________________¶¶¶¶ 
+                ___________________¶¶¶¶ 
+                ___________________¶¶¶¶ 
+                ___________________¶¶¶¶ 
+                _______________¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ____________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ____________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ____________¶¶¶____________¶¶¶ 
+                ____________¶¶¶____________¶¶¶ 
+                ____________¶¶¶____________¶¶¶ 
+                ____________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                ____________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                __________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶ 
+                _________¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶
+                </pre>
 
         </article>
     </main>
