--- a/conceptos.html
+++ b/conceptos.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configuracion</title>
+    <title>Conceptos</title>
+    <style>
+        dt{
+            color: black;
+            font-family: 'Lobster', cursive;
+        }
+        dd{
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.5;
+        }
+        figcaption{
+            color: black;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            line-height: 1.5;
+        }
+    </style>
 </head>
 <h1>Conceptos importantes para entender el Fantasy Football</h1>
 <body style="background-color: skyblue;">
